--- a/GeneticAlgNetControl/Pages/Overview.cshtml
+++ b/GeneticAlgNetControl/Pages/Overview.cshtml
@@ -210,8 +210,61 @@
         {
             foreach (var item in Model.View.Items)
             {
-                <li id="algorithm-@item.Id" class="list-group-item list-group-item-action list-group-item-light item-group-item">
-                    <partial name="_AlgorithmPartial" model="item" />
+                <li class="list-group-item list-group-item-action list-group-item-light item-group-item">
+                    <div class="row align-items-center">
+                        <div class="col-2 col-xl-1 text-center">
+                            <div class="custom-control custom-checkbox">
+                                <input type="checkbox" id="@item.Id" name="id" value="@item.Id" class="custom-control-input" title="Select" />
+                                <label for="@item.Id" class="custom-control-label"></label>
+                            </div>
+                        </div>
+                        <div class="col-4 col-xl-2 text-center text-truncate">
+                            <div>
+                                <span title="@item.Name" class="font-weight-bold algorithm-item-name">@item.Name</span>
+                            </div>
+                            <div>
+                                <span title="@item.Id" class="small algorithm-item-id">@item.Id</span>
+                            </div>
+                        </div>
+                        <div class="col-2 col-xl-2 text-center text-truncate">
+                            <div>
+                                <span title="" class="algorithm-item-status"></span>
+                            </div>
+                        </div>
+                        <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
+                            <div>
+                                <span title="" class="algorithm-item-time-span"></span>
+                            </div>
+                        </div>
+                        <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
+                            <div>
+                                <span title="" class="algorithm-item-progress-iterations"></span>
+                            </div>
+                            <div>
+                                <span title="" class="algorithm-item-progress-iterations-without-improvement"></span>
+                            </div>
+                        </div>
+                        <div class="col-4 col-xl-3 d-flex flex-row flex-wrap justify-content-center">
+                            <a asp-page="/Details" asp-route-id="@item.Id" class="btn btn-outline-info m-1 algorithm-item-button-details" title="Details">
+                                <span><i class="fas fa-info-circle"></i></span>
+                            </a>
+                            <a asp-page="/Create" asp-route-id="@item.Id" class="btn btn-outline-dark m-1 algorithm-item-button-copy" title="Copy">
+                                <span><i class="fas fa-copy"></i></span>
+                            </a>
+                            <a asp-page="/Stop" asp-route-id="@item.Id" class="btn btn-outline-danger m-1 algorithm-item-button-stop" title="Stop">
+                                <span><i class="fas fa-stop"></i></span>
+                            </a>
+                            <a asp-page="/Start" asp-route-id="@item.Id" class="btn btn-outline-success m-1 algorithm-item-button-start" title="Start">
+                                <span><i class="fas fa-play"></i></span>
+                            </a>
+                            <a asp-page="/Save" asp-route-id="@item.Id" class="btn btn-outline-primary m-1 algorithm-item-button-save" title="Save">
+                                <span><i class="fas fa-save"></i></span>
+                            </a>
+                            <a asp-page="/Delete" asp-route-id="@item.Id" class="btn btn-outline-danger m-1 algorithm-item-button-delete" title="Delete">
+                                <span><i class="fas fa-trash"></i></span>
+                            </a>
+                        </div>
+                    </div>
                 </li>
             }
         }
