Added the Save page and updated the UI of all the list pages.

--- a/GeneticAlgNetControl/Pages/Overview.cshtml
+++ b/GeneticAlgNetControl/Pages/Overview.cshtml
@@ -128,7 +128,7 @@
 <hr />
 <form method="get">
     <ul class="list-group list-group-flush item-group">
-        <li class="list-group-item bg-transparent">
+        <li class="list-group-item bg-transparent border-0">
             <div class="row align-items-center">
                 <div class="col-sm-6 text-center text-md-left">
                     <span class="text-muted small">Showing items @Model.View.ItemsPerPageFirst to @Model.View.ItemsPerPageLast out of @Model.View.TotalItems.</span>
