--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -27,9 +27,9 @@
                             <span class="col-2 text-center"><i class="fas fa-home"></i></span>
                         </div>
                     </a>
-                    <a asp-page="/Overview" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "Overview" ? "active" : string.Empty)">
+                    <a asp-page="/Dashboard" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "Dashboard" ? "active" : string.Empty)">
                         <div class="row">
-                            <span class="col-10 font-weight-bold text-left text-wrap">Overview</span>
+                            <span class="col-10 font-weight-bold text-left text-wrap">Dashboard</span>
                             <span class="col-2 text-center"><i class="fas fa-chart-bar"></i></span>
                         </div>
                     </a>
