Added charts and updated the Details page.

--- a/GeneticAlgNetControl/Pages/Dashboard.cshtml
+++ b/GeneticAlgNetControl/Pages/Dashboard.cshtml
@@ -126,6 +126,15 @@
     </div>
 </form>
 <hr />
+<div class="row">
+    <div class="offset-lg-3 col-lg-6">
+        <div class="chart-js-chart" data-type="dashboard">
+            <span class="chart-js-data" hidden>@Model.View.ChartData</span>
+            <canvas class="chart-js-canvas"></canvas>
+        </div>
+    </div>
+</div>
+<hr />
 <form method="get">
     <ul class="list-group list-group-flush item-group">
         <li class="list-group-item bg-transparent border-0">
