--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -92,6 +92,7 @@
     <script src="~/lib/font-awesome/js/all.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
+    <script src="~/lib/chart-js/Chart.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="false"></script>
     @RenderSection("Scripts", required: false)
 </body>
